Replaced new Float(), new Short(), new Character() and new Boolean()